--- a/public/estadisticas-jugadores.html
+++ b/public/estadisticas-jugadores.html
@@ -8,8 +8,8 @@
         :root{
           --bg: transparent;                 /* usa #0b0f14 si no es overlay */
           --ink:#e8eef9; --muted:#9bb0c9;
-          --a:#6bd3ff;                       /* lado A */
-          --b:#ffba5c;                       /* lado B */
+          --a:#6bd3ff;                       /* color lado A */
+          --b:#ffba5c;                       /* color lado B */
           --radius:24px;
         }
         *{box-sizing:border-box}
@@ -44,24 +44,10 @@
           font-size:clamp(24px,2.8vw,40px); letter-spacing:1px;
         }
 
-        /* Columna de jugador */
+        /* Columna de jugador (sin logo/monigote) */
         .col{
           display:flex; flex-direction:column; align-items:center; gap:1.2vw;
-          position:relative;
         }
-        .logo{
-          width:clamp(120px,14vw,220px); height:clamp(120px,14vw,220px);
-          border-radius:18px; overflow:hidden; display:grid; place-items:center;
-          background:#0e1620; border:2px solid #2a3a4d;
-          box-shadow:0 10px 30px rgba(0,0,0,.35)
-        }
-        .logo img{width:100%; height:100%; object-fit:cover}
-        .figure{
-          position:absolute; top:-10px; width:clamp(44px,4.4vw,68px); height:auto; opacity:.95;
-          filter: drop-shadow(0 8px 16px rgba(0,0,0,.35));
-        }
-        .fig-left{left:-3.4vw}
-        .fig-right{right:-3.4vw; transform:scaleX(-1)}
         .head{display:flex; flex-direction:column; align-items:center; gap:.3vw}
         .name{font-weight:900; line-height:1.05; text-align:center; font-size:clamp(24px,3.2vw,48px)}
         .team{font-size:clamp(12px,1.2vw,18px); color:var(--muted)}
@@ -72,7 +58,7 @@
         .a .val{color:#cfefff;background:rgba(107,211,255,.12);border:1px solid rgba(107,211,255,.35)}
         .b .val{color:#ffe7c4;background:rgba(255,186,92,.12); border:1px solid rgba(255,186,92,.35)}
 
-        /* Píldoras en columna */
+        /* Píldoras en columna, números grandes */
         .stack{width:100%; max-width:min(560px,46vw); display:flex; flex-direction:column; gap:.8vw}
         .pill{
           background:#0f1724; border:1px solid #2a3a4d; border-radius:16px;
@@ -88,7 +74,6 @@
 
         @media (max-width:1000px){
           .grid{grid-template-columns:1fr; gap:2vw}
-          .fig-left{left:-2.4vw} .fig-right{right:-2.4vw}
           .vs{margin:0 auto}
         }
     </style>
@@ -106,74 +91,10 @@
 </div>
 
 <script>
-    /* ===================== UTILIDADES ===================== */
+    /* ============ UTILIDADES ============ */
     const pct  = (m,a)=> a>0 ? (100*m/a).toFixed(1)+'%' : '—';
     const ma   = (m,a)=> `${m}/${a}`;
     const full = p => [p.first||'', p.last||''].join(' ').trim() || ('#'+(p.num||''));
-
-    // Normaliza rutas de logo desde la plantilla:
-    //  - "../imagenes/x.png"   -> "/imagenes/x.png"
-    //  - "./x.png"             -> "/plantillas/x.png"
-    //  - "imagenes/x.png"      -> "/plantillas/imagenes/x.png"
-    //  - "/imagenes/x.png"     -> "/imagenes/x.png" (se respeta)
-    //  - http(s)/data:         -> tal cual
-    function resolveLogoPath(raw){
-      let p = (raw||'').trim();
-      if(!p) return '';
-      if(/^https?:|^data:/.test(p)) return p;
-      // quitar todos los "../" iniciales -> volver relativo a raíz
-      if(/^(\.\.\/)+/.test(p)) return '/' + p.replace(/^(\.\.\/)+/, '');
-      if(/^\.\//.test(p)) return '/plantillas/' + p.replace(/^\.\//,'');
-      if(p.startsWith('/')) return p;
-      return '/plantillas/' + p;
-    }
-
-    // Cache (por nombre de equipo) de logos
-    const logoCache = new Map();
-
-    // Lee el META.logo desde /plantillas/<equipo>.csv (o variantes) y lo normaliza
-    async function logoFromPlantilla(teamName){
-      if(!teamName) return '';
-      if(logoCache.has(teamName)) return logoCache.get(teamName);
-
-      const variants = (base)=>{
-        const gap   = base;
-        const under = base.replace(/\s+/g,'_');
-        const enc   = encodeURIComponent(base);
-        return [
-          `/plantillas/${gap}.csv`,
-          `/plantillas/${under}.csv`,
-          `/plantillas/${enc}.csv`
-        ];
-      };
-
-      async function readLogo(url){
-        try{
-          const r = await fetch(url, {cache:'no-store'});
-          if(!r.ok) return null;
-          const text = await r.text();
-          const sep = text.includes(';')?';':',';
-          const lines = text.split(/\r?\n/).filter(Boolean);
-          if(!lines.length) return null;
-          const headers = lines[0].split(sep).map(h=>h.trim().toLowerCase());
-          for(let i=1;i<lines.length;i++){
-            const cells = lines[i].split(sep).map(c=>c.trim());
-            const row = Object.fromEntries(headers.map((h,idx)=>[h, cells[idx]||'']));
-            if((row.type||'').toLowerCase()==='meta' && row.logo){
-              return resolveLogoPath(row.logo);
-            }
-          }
-        }catch(_){ return null; }
-        return null;
-      }
-
-      for(const u of variants(teamName)){
-        const hit = await readLogo(u);
-        if(hit){ logoCache.set(teamName, hit); return hit; }
-      }
-      logoCache.set(teamName, '');
-      return '';
-    }
 
     function topTwoByVal(data){
       const arr=[];
@@ -182,16 +103,9 @@
       return [arr[0], arr[1]].filter(Boolean);
     }
 
-    function playerColumn(el, pl, team, side, logoUrl){
+    function playerColumn(el, pl, team, side){
       el.className = 'col ' + side;
       el.innerHTML = `
-        <div class="logo">
-          <svg class="figure ${side==='a'?'fig-left':'fig-right'}" viewBox="0 0 24 24" fill="none">
-            <circle cx="12" cy="5" r="3" fill="${side==='a'?'var(--a)':'var(--b)'}"/>
-            <path d="M12 8c-3 0-5 2.5-5 5.5V22h2v-5h6v5h2v-8.5C17 10.5 15 8 12 8Z" fill="currentColor" opacity=".35"/>
-          </svg>
-          <img alt="logo ${team?.name||''}">
-        </div>
         <div class="head">
           <div class="name">${full(pl)}</div>
           <div class="team">${team?.name||''} <span class="val">VAL ${pl.VAL??0}</span></div>
@@ -212,8 +126,6 @@
             <span class="sub">${ma(pl._3PM||0, pl._3PA||0)}</span>
           </div>
         </div>`;
-      const img = el.querySelector('img');
-      img.src = logoUrl || '';
     }
 
     async function tick(){
@@ -224,15 +136,8 @@
           const [A,B] = topTwoByVal(data);
           const L = document.getElementById('left');
           const R = document.getElementById('right');
-
-          // logo desde JSON (normalizando) o desde la plantilla
-          let logoA = resolveLogoPath(A?.team?.logo||'');
-          let logoB = resolveLogoPath(B?.team?.logo||'');
-          if(!logoA && A) logoA = await logoFromPlantilla(A.team?.name||'');
-          if(!logoB && B) logoB = await logoFromPlantilla(B.team?.name||'');
-
-          if(A) playerColumn(L, A.pl, A.team, 'a', logoA);
-          if(B) playerColumn(R, B.pl, B.team, 'b', logoB);
+          if(A) playerColumn(L, A.pl, A.team, 'a');
+          if(B) playerColumn(R, B.pl, B.team, 'b');
         }
       }catch(_){}
       setTimeout(tick, 600);
